src/css/style.css
/* ... */
.category-active {
  filter: grayscale(0);
}

.category-icon {
  width: 40px;
  height: 40px;
  background-color: var(--text-light-color);
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  transition: 0.4s;
  margin-left: 16px;
}
.category-name {
  padding-left: 16px;
  font-size: 1.2rem;
}

.footer {
  margin-top: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 32px;
}
.footer-mobile {
  display: none;
}
.by {
  /* width: 50%; */
  /* display: flex; */
  /* align-items: center; */
  font-weight: 600;
  width: 80px;
  display: flex;
  justify-content: space-around;
  align-items: center;
}
.by img {
  width: 24px;
  height: 24px;
  /* padding-right: 8px; */
  /* padding-left: 8px; */
}
.by a {
  /* padding-left: 8px; */
  font-weight: 300;
}
.social-media {
  /* width: 50%; */
  /* display: flex; */
  /* justify-content: space-around; */
  width: 100px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 4px;
}

.social-media a {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  border-radius: 8px;
}
/* .social-media a:hover {
  background-color: var(--bg-color);
} */
.social-media a:nth-child(3):hover {
  background-color: #ffffff;
}
.social-media a:nth-child(2):hover {
  background-color: #0a66c2;
}
.social-media a:nth-child(1):hover {
  background-color: #1da1f2;
}

.content {
  /* flex-grow: 2; */
  /* width: 60%; */
  width: calc(100% - (var(--menu-width) * 2));
  height: 100vh;
  padding: 32px;
  display: flex;
  flex-direction: column;
  /* overflow: auto; */
  background-color: rgba(255, 255, 255, 0.3);
  backdrop-filter: blur(40px);
  background-clip: padding-box;
  box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
}

.content-header {
  font-size: 3rem;
  font-weight: 600;
  height: var(--block-height);
}
.search {
  width: 100%;
  position: relative;
  height: var(--block-height);
  margin-top: 24px;
}
.search input {
  width: 100%;
  border: none;
  height: calc(var(--block-height) * 0.75);
  border-radius: 32px;
  padding: 24px;
  padding-left: 56px;
  font-size: 1.2rem;
  background-image: url("../images/search.svg");
  background-position: 24px 50%;
  background-repeat: no-repeat;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
}
.search input:focus {
  outline: none;
  /* box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); */
  /* box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); */
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
}

.search button {
  position: absolute;
  right: 0;
  border: none;
  /* height: 100%; */
  height: calc(var(--block-height) * 0.75);
  width: 20%;
  border-radius: 32px;
  /* background-color: var(--primary-color); */
  background-image: var(--btn-gradient);
  background-size: 200% auto;
  transition: 0.3s;
  box-shadow: 0 0 20px #eee;
  color: var(--text-light-color);
  cursor: pointer;
  letter-spacing: 0.1vw;
}
.search button:hover {
  background-position: right center;
}

.meaning {
  /* height: var(--block-height); */
  width: 100%;
  margin-top: 24px;
  /* margin-bottom: 24px; */
  background-color: var(--bg-color);
  border-radius: 12px;
  /* height: 100px; */
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.2rem;
}
.meaning span {
  height: var(--block-height);
  /* display: inline-block; */
  display: flex;
  align-items: center;
  justify-content: center;
}
.category-emojis {
  /* padding-top: 24px; */
  /* margin-top: 24px; */
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  overflow: auto;
  margin-top: 16px;
  padding-top: 16px;

  padding-bottom: 16px;

  /* scroll-snap-type: y mandatory; */
}
.emoji {
  border: 1px solid #bab7c02c;
  cursor: pointer;
  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
  z-index: 5;
  position: relative;
  /* scroll-snap-align: start; */
}
.emoji:hover {
  /* background-color: var(--bg-color); */
  background-color: inherit;
  border-radius: 24px;
  /* box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); */
  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}

.emoji span {
  width: 180px;
  height: 180px;
  /* width: 200px;
  height: 200px; */

  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 4rem;
  /* text-shadow: 0px 3px 0px #b2a98f, 0px 14px 10px rgba(0, 0, 0, 0.15),
    0px 24px 2px rgba(0, 0, 0, 0.1), 0px 34px 30px rgba(0, 0, 0, 0.1); */
  text-shadow: 0px 15px 5px rgba(0, 0, 0, 0.1),
    10px 20px 5px rgba(0, 0, 0, 0.05), -10px 20px 5px rgba(0, 0, 0, 0.05);
  /* text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
    0px 18px 23px rgba(0, 0, 0, 0.1); */
  /* text-shadow: 3px 4px 7px rgba(81, 67, 21, 0.8); */
}

/* sidebar */

.sidebar {
  width: var(--menu-width);
  /* min-width: 20%; */
  /* background-color: rgba(255, 255, 255, 0.5); */
  padding: 32px;
  background-color: rgba(255, 255, 255, 0.6);
  backdrop-filter: blur(40px);
  background-clip: padding-box;
  box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
}

.sidebar-header {
  display: flex;
  /* align-items: center; */
  align-items: flex-start;
  min-height: var(--block-height);
  border-bottom: 1px solid rgba(197, 197, 197, 0.507);
  /* overflow: hidden; */
}

.sidebar-header__emoji {
  font-size: 2.2rem;
  align-self: flex-start;
}
.sidebar-header__title {
  font-size: 2.2rem;
  padding-left: 8px;
  /* word-break: break-all; */
  /* hyphens: auto; */
  /* -webkit-hyphens: auto;
  -moz-hyphens: auto;
  hyphens: auto; */
}

.sidebar-emoji-description {
  padding-top: 24px;
  font-weight: 600;
}
.sidebar-emoji-copy {
  padding-top: 24px;
  display: flex;
}
/* ... */

